# dynamodb-entities

./: DesigningYourTable.md  LICENSE  README.md
.github/workflows/: build-wheel.yml  build.yml
dynamodbEntities/: pyproject.toml  requirements.txt
dynamodbEntities/src/dynamodbEntities/: __init__.py  baseDatastore.py  decorators.py  dynamodbHelpers.py  entity.py  helpers.py
dynamodbEntities/test/: test_entity.py
example/highscore/: main.py  tablespecs.py
example/highscore/entities/: UserStats.py  _factory.py
examples/highscore/: README.md  datastore.py  main.py
examples/highscore/entities/: PlayDate.py  PlayScore.py  UserStats.py  __init__.py
examples/webshop/: README.md  tablespec.py
examples/webshop/entities/: Customer.py  Item.py  Order.py  __init__.py  _factory.py
